--- a/css/index.css
+++ b/css/index.css
@@ -179,7 +179,7 @@ p{
 
 }
 /* Slideshow */
-#slideshow {
+.slideshow {
     margin-left: auto; margin-right: auto;
     position: relative;
     width: 533px;
@@ -192,7 +192,7 @@ p{
     overflow: hidden;
 }
 
-#slideshow > div {
+.slideshow > div {
     position: absolute;
     top: 0;
     left: 0;
@@ -200,7 +200,7 @@ p{
     bottom: 0;
     margin: 0 auto;
 }
-#slideshow > div > img{
+.slideshow > div > img{
     height: 100%;
     text-align: center;
 }
