--- a/css/index.css
+++ b/css/index.css
@@ -180,16 +180,16 @@ p{
 }
 /* Slideshow */
 .slideshow {
-    margin-left: auto; margin-right: auto;
+    margin-left: 0; margin-right: 0;
     position: relative;
     width: 533px;
     height: 400px;
-    border: 10px solid #191919;
+    /*border: 10px solid #191919;*/
     background-color: #191919;
     box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    overflow: hidden;
+    /*overflow: hidden;*/
 }
 
 .slideshow > div {
