--- a/css/index.css
+++ b/css/index.css
@@ -180,9 +180,10 @@ p{
 }
 /* Slideshow */
 .slideshow {
-    margin-left: 0; margin-right: 0;
+    margin:-5px;
+    padding: 0;
     position: relative;
-    width: 533px;
+    width: 530px;
     height: 400px;
     /*border: 10px solid #191919;*/
     background-color: #191919;
@@ -198,12 +199,22 @@ p{
     left: 0;
     right: 0;
     bottom: 0;
-    margin: 0 auto;
+    margin: 0;
 }
 .slideshow > div > img{
     height: 100%;
     text-align: center;
+
 }
+#slideshow1{  z-index: 8;  }
+#slideshow2{  z-index: 7;  }
+#slideshow3{  z-index: 6;  }
+#slideshow4{  z-index: 5;  }
+#slideshow5{  z-index: 4;  }
+#slideshow6{  z-index: 3;  }
+#slideshow7{  z-index: 2;  }
+
+
 /* Rush Page */
 
 .event:hover{
