--- a/css/index.css
+++ b/css/index.css
@@ -180,23 +180,20 @@ p{
 }
 /* Slideshow */
 .slideshow {
-    margin:-5px;
+    margin:-2px;
     padding: 0;
     position: relative;
     width: 530px;
     height: 400px;
     /*border: 10px solid #191919;*/
-    background-color: #191919;
-    box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);
-    -moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);
+    /*background-color: #191919;*/
     /*overflow: hidden;*/
 }
 
-.slideshow > div {
+.slideshow > div.imgCont {
     position: absolute;
     top: 0;
-    left: 0;
+    left: 530px;
     right: 0;
     bottom: 0;
     margin: 0;
