Finished members page

--- a/icons/flaticon.css
+++ b/icons/flaticon.css
@@ -20,6 +20,9 @@ margin-left: 20px;
 .flaticon-facebook55:before {
 	content: "\e001";
 }
-.flaticon-instagram16:before {
+.flaticon-house34:before {
 	content: "\e002";
+}
+.flaticon-instagram16:before {
+	content: "\e003";
 }
