--- a/css/index.css
+++ b/css/index.css
@@ -71,11 +71,15 @@
 /* Width */
 .width100           {  width: 100%;                                 }
 
+/* Font Styling */
+.boldText           {  font-weight: bold;                           }
+
 /* Margin */
 .marg0              {  margin: 0;                                   }
 
 /* Padding */
 .pad0               {  padding: 0;                                  }
+
 
 /* Position */
 .posAbs             {  position: absolute;                          }
@@ -243,6 +247,12 @@ p{
 /* Members Page */
 .grid-item{
     overflow: hidden;
+}
+
+.cmCont{
+    height: 35px;width: 35px;
+    border-radius: 50%;
+    background-color:  #F7302F;
 }
 
 /* Footer Icon */
