--- a/icons/flaticon.css
+++ b/icons/flaticon.css
@@ -17,12 +17,21 @@ margin-left: 20px;
 }.flaticon-castle:before {
 	content: "\e000";
 }
-.flaticon-facebook55:before {
+.flaticon-crowd:before {
 	content: "\e001";
 }
-.flaticon-house34:before {
+.flaticon-facebook55:before {
 	content: "\e002";
 }
-.flaticon-instagram16:before {
+.flaticon-house34:before {
 	content: "\e003";
+}
+.flaticon-instagram16:before {
+	content: "\e004";
+}
+.flaticon-professional5:before {
+	content: "\e005";
+}
+.flaticon-teacher4:before {
+	content: "\e006";
 }
