--- a/css/index.css
+++ b/css/index.css
@@ -164,6 +164,11 @@ p{
     -webkit-box-shadow: 0 0 20px rgba(0,0,0,0.4);
     -moz-box-shadow: 0 0 20px rgba(0,0,0,0.4);
 }
+.shadowContact{
+    -webkit-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
+}
 
 
 /* Navigation Bar */
