--- a/css/index.css
+++ b/css/index.css
@@ -126,13 +126,13 @@ p{
 #rushBtn{
     border-bottom: 4px solid #DE2B2A;
     cursor: pointer;
-    width: 300px;
-    height: 25px;
+    width: 60%;
+    height: 4.2%;
     background-color: #F7302F;
     color: white;
     border-radius: 20px;
     padding: 15px;
-    font-size: 30px;
+    font-size: 1.75vw;
     margin: 50px auto;
     font-family: Adam, sans-serif;
     position: relative;
