--- a/css/index.css
+++ b/css/index.css
@@ -252,18 +252,18 @@ p{
 
 /* Members Page */
 .grid-item{
-    -webkit-box-shadow: 0px 0px 12px -2px #330A0A;
-    -moz-box-shadow: 0px 0px 12px -2px #330A0A;
-    box-shadow: 0px 0px 12px -2px #330A0A;
+    -webkit-box-shadow: 0 0 12px -2px #330A0A;
+    -moz-box-shadow: 0 0 12px -2px #330A0A;
+    box-shadow: 0 0 12px -2px #330A0A;
 }
 
 
 .grid-item:hover{
     overflow: hidden;
 
-    -webkit-box-shadow: 0px 0px 20px -2px #330A0A;
-    -moz-box-shadow: 0px 0px 20px -2px #330A0A;
-    box-shadow: 0px 0px 20px -2px #330A0A;
+    -webkit-box-shadow: 0 0 20px -2px #330A0A;
+    -moz-box-shadow: 0 0 20px -2px #330A0A;
+    box-shadow: 0 0 20px -2px #330A0A;
 }
 
 .cmCont{
