--- a/css/index.css
+++ b/css/index.css
@@ -14,6 +14,10 @@
 .adam {  font-family: 'Adam', sans-serif; }
 .amaranth {  font-family: 'Amaranth', sans-serif;}
 
+#footer{
+    bottom: 0; height: 80px; background-color: #191919; width: 100%;margin-top: 80px;
+}
+
 /* Font Sizes : 10 to 20, 20 to 40 in multiples of 4 */
 
 .fontSize40{  font-size: 2.5em;     }
@@ -104,7 +108,7 @@
 .backColWhite       {  background-color: white;                     }
 .backColLGray       {  background-color: lightgrey;                 }
 .backColBlack       {  background-color: black;                     }
-.backColBackGround  {  background-color: #e6e6e6;                   }
+.backColBackGround  {  background-color: #efefef;                   }
 
 /* Links */
 .textDecNone, .textDecNone:active, .textDecNone:visited, .textDecNone:hover {
