--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,7 @@
 .fontSize36{  font-size: 2.25em;    }
 .fontSize32{  font-size: 2em;       }
 .fontSize28{  font-size: 1.75em;    }
+.fontSize26{  font-size: 1.625em;     }
 .fontSize24{  font-size: 1.5em;     }
 
 .fontSize20{  font-size: 1.25em;    }
@@ -39,11 +40,14 @@
 .fontSize11{  font-size: 0.6875em;  }
 .fontSize10{  font-size: 0.625em;   }
 
+/* Line Height */
+.lineHeight24{  line-height:1.5em;}
+
 /* Alignment */
-.centerText         {  text-align: center;                          }
-.leftText         {  text-align: left;                          }
+.centerText         {  text-align: center; align-items: center;                         }
+.leftText           {  text-align: left;                          }
 .centerDiv          {  margin-left: auto; margin-right: auto;       }
-.centerVert          {display:flex;text-align: left;align-items:center;}
+.centerVert         {  display:flex;text-align: left;align-items:center;}
 
 .floatLeft          {  float: left;                                 }
 .floatRight         {  float: right;                                }
@@ -114,6 +118,7 @@
 .backColLGray       {  background-color: lightgrey;                 }
 .backColBlack       {  background-color: black;                     }
 .backColBackGround  {  background-color: #efefef;                   }
+.backColRed         {  background-color: #F7302F;                   }
 
 /* Links */
 .textDecNone, .textDecNone:active, .textDecNone:visited, .textDecNone:hover {  text-decoration: none;
