--- a/css/index.css
+++ b/css/index.css
@@ -46,9 +46,9 @@
 /* Alignment */
 .centerText         {  text-align: center; align-items: center;                         }
 .leftText           {  text-align: left;                          }
+.rightText           {  text-align: right;                          }
 .centerDiv          {  margin-left: auto; margin-right: auto;       }
-.centerVert         {  display:flex;text-align: left;align-items:center;}
-.centerVertHorz     {  display:flex;text-align: center;align-items: center;}
+.centerVert         {  display:flex;align-items:center;}
 
 .floatLeft          {  float: left;                                 }
 .floatRight         {  float: right;                                }
