--- a/css/index.css
+++ b/css/index.css
@@ -152,6 +152,29 @@ p           {  line-height: 30px;  }
     box-shadow: inset 0 4px 5px  #9E1F1E;
 }
 
+/* Rush Button Mobile */
+#mobRushBtn{
+    border-bottom: 4px solid #DE2B2A;
+    cursor: pointer;
+    background-color: #F7302F;
+    color: white;
+    border-radius: 20px;
+    padding: 15px 0 20px 0;
+    font-size: 2vw;
+    margin: 25px auto;
+    font-family: Adam, sans-serif;
+    position: relative;
+}
+#mobRushBtn:hover{
+    border: none;
+    top: 4px;
+}
+#mobRushBtn:active{
+    -webkit-box-shadow: inset 0 4px 5px #9E1F1E;
+    -moz-box-shadow: inset 0 4px 5px #9E1F1E;
+    box-shadow: inset 0 4px 5px  #9E1F1E;
+}
+
 
 /* Shadow */
 .shadowTop{
