--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,7 +6,7 @@
     background-color: #F7302F;
     color: white;
     border-radius: 20px;
-    padding: 15px 15px 25px 15px;
+    padding: 15px;
     font-size: 2vw;
     margin: 25px auto;
     font-family: Adam, sans-serif;
