--- a/css/mobile.css
+++ b/css/mobile.css
@@ -6,8 +6,8 @@
     background-color: #F7302F;
     color: white;
     border-radius: 20px;
-    padding: 15px;
-    font-size: 2vw;
+    padding: 15px 20px 20px 20px;
+    font-size: 2em;
     margin: 25px auto;
     font-family: Adam, sans-serif;
     position: relative;
