--- a/css/rush.css
+++ b/css/rush.css
@@ -1,13 +1,28 @@
+@media all and (max-device-width: 899px) {
+    #rushflierimage {
+        width: 850px;
+        float: none;
+        height: 315px;
+        margin: 25px 0 5px 5px;
+    }
+    #introBlock{
+        padding: 15px;
+    }
+    #introTitle{
+        font-size: 70px;
+    }
+}
+@media all and (min-device-width: 900px) {
+    #rushflierimage {
+        width: 500px; height: 185px;margin: 75px 0 0 25px;
+    }
+    #introTitle{
+        font-size: 36px;
+    }
+}
 strong{
     color: #DB2B2A;
     font-weight:normal;
-}
-@media only screen and (max-width: 899px) {
-    #rushflier {
-        float: none;
-        display: block;
-        margin: 0 auto;
-    }
 }
 .circShadow{
     -webkit-box-shadow: 0 5px 10px 0 #464646;
