Fixed silly visual bug with the rush button on front page

--- a/css/index.css
+++ b/css/index.css
@@ -93,8 +93,8 @@
     background-color: #F7302F;
     color: white;
     border-radius: 20px;
-    padding: 15px 15px 5px 15px;
-    font-size: 2vw;
+    padding: 15px 15px 10px 15px;
+    font-size: 2em;
     margin: 50px auto;
     font-family: Adam, sans-serif;
     position: relative;
