--- a/css/index.css
+++ b/css/index.css
@@ -16,11 +16,13 @@
         height: 298px;
         left: -99.5%;
     }
+
 }
 @media all and (max-width:900px) {
     /*body{
         border: 1px solid red;
     }*/
+
 }
 #ssCont{
     text-align: left;
@@ -93,15 +95,17 @@
     background-color: #F7302F;
     color: white;
     border-radius: 20px;
-    padding: 15px 15px 10px 15px;
-    font-size: 2em;
-    margin: 50px auto;
+    font-size: 32px;
+    margin: 0 auto;
+    padding: 10px 20px;
     font-family: Adam, sans-serif;
     position: relative;
+    top: 50px;
+
 }
 #rushBtn:hover{
     border: none;
-    top: 4px;
+    top: 54px;
 }
 #rushBtn:active{
     -webkit-box-shadow: inset 0 4px 5px #9E1F1E;
